@@ -1,3 +1,13 @@
+*reposilite-2.9.26 (27 Dec 2021)
+
+  27 Dec 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.26.cdn,
+  +reposilite-2.9.26.ebuild, -files/reposilite-2.9.16.cdn,
+  -files/reposilite-2.9.18.cdn, -files/reposilite-2.9.23.cdn,
+  -reposilite-2.9.16.ebuild, -reposilite-2.9.18.ebuild,
+  -reposilite-2.9.23.ebuild, -reposilite-2.9.25.ebuild:
+  dev-util/reposilite: Add ebuild for version 2.9.26  The dependency to docker
+  has been fixed (app-emulation/docker --> app-containers/docker).
+
 *reposilite-2.9.26 (16 Nov 2021)
 
   16 Nov 2021; Manuel Friedli <manuel@gentoo.org> +reposilite-2.9.26.ebuild:
